Bug #260482 --> custom mail headers (e.g. In-Reply-To) cannot be passed from command line

Patch by: kmccarty@princeton.edu

r=bienvenu
sr=mscott
a=sspitzer